fix: controls overflowing document

--- a/src/style.scss
+++ b/src/style.scss
@@ -152,6 +152,7 @@ section {
 	border-bottom: solid 1px var(--dark);
 	border-right: solid 1px var(--dark);
 	max-height: 100%;
+	max-width: 100%;
 
 	display: flex;
 	flex-direction: column;
